deploy/k8s-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: autoscale-test
    autoscale: "true"
  name: autoscale-test
  namespace: default
spec:
  selector:
    matchLabels:
      app: autoscale-test
  template:
    metadata:
      annotations:
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        app: autoscale-test
    spec:
      containers:
      - image: docker.io/shikanon096/random-prometheus-metrics:latest
        imagePullPolicy: Always
        name: autoscale-test
        command:
        - /app/random-metrics
        - --listen-address=:8000
        ports:
          - containerPort: 8000
            name: metrics
            protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: "100Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: autoscale-test
  name: autoscale-test
  namespace: default
spec:
  ports:
  - name: http-metrics
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: autoscale-test
  sessionAffinity: None
  type: ClusterIP
