deploy/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simplescaler-recommender
  name: simplescaler-recommender
  namespace: operator
spec:
  selector:
    matchLabels:
      app: simplescaler-recommender
  template:
    metadata:
      annotations:
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        app: simplescaler-recommender
    spec:
      containers:
      - image: registry.cn-beijing.aliyuncs.com/shikanon/simplescaler-recommender:v0.0.3
        imagePullPolicy: Always
        name: recommender
        command:
        - /app/scale-recommender
        - --runonce-interval=5s
        - --promethues-address=http://prometheus-mp-server.cluster-monitor.svc:80
        ports:
          - containerPort: 8000
            name: metrics
            protocol: TCP
        resources:
          limits:
            cpu: "100m"
            memory: "100Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
      serviceAccount: simplescaler
      serviceAccountName: simplescaler

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simplescaler-updater
  name: simplescaler-updater
  namespace: operator
spec:
  selector:
    matchLabels:
      app: simplescaler-updater
  template:
    metadata:
      annotations:
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        app: simplescaler-updater
    spec:
      containers:
      - image: registry.cn-beijing.aliyuncs.com/shikanon/simplescaler-update:v0.0.2
        imagePullPolicy: Always
        name: updater
        command:
        - /app/autoscaler
        - --runonce-interval=5s
        ports:
          - containerPort: 8000
            name: metrics
            protocol: TCP
        resources:
          limits:
            cpu: "100m"
            memory: "100Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
      serviceAccount: simplescaler
      serviceAccountName: simplescaler
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simplescaler-webhook
    app.kubernetes.io/instance: simpleautoscale-webhook
    app.kubernetes.io/name: simpleautoscale-webhook
  name: simplescaler-webhook
  namespace: operator
spec:
  selector:
    matchLabels:
      app: simplescaler-webhook
      app.kubernetes.io/instance: simpleautoscale-webhook
      app.kubernetes.io/name: simpleautoscale-webhook
  template:
    metadata:
      labels:
        app: simplescaler-webhook
        app.kubernetes.io/instance: simpleautoscale-webhook
        app.kubernetes.io/name: simpleautoscale-webhook
    spec:
      containers:
      - image: registry.cn-beijing.aliyuncs.com/shikanon/simplescaler-webhook:v0.0.2
        imagePullPolicy: Always
        name: webhook
        command:
        - /app/scale-webhook
        - --port=:8000
        - --key=/app/cert/private.key
        - --cert=/app/cert/cert.pem
        ports:
          - containerPort: 8000
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: "100m"
            memory: "100Mi"
          requests:
            cpu: "10m"
            memory: "50Mi"
        volumeMounts:
        - mountPath: /app/cert
          name: config
      serviceAccount: simplescaler
      serviceAccountName: simplescaler
      volumes:
      - configMap:
          defaultMode: 420
          name: scale-webhhok-config
        name: config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simpleautoscale-webhook
    app.kubernetes.io/instance: simpleautoscale-webhook
    app.kubernetes.io/name: simpleautoscale-webhook
  name: simpleautoscale-webhook
  namespace: operator
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/instance: simpleautoscale-webhook
    app.kubernetes.io/name: simpleautoscale-webhook
  type: ClusterIP
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: simpleautoscale-webhook.shikanon.com
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM4akNDQWRxZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFwTVJrd0Z3WURWUVFLRXhCRFEwVWcKVkdWamFHNXZiRzluYVdWek1Rd3dDZ1lEVlFRREV3TkRRMFV3SUJjTk1qRXdOREEzTURJeE5UUTBXaGdQTWpBMQpNVEF6TXpFd01qRTFORFJhTUNreEdUQVhCZ05WQkFvVEVFTkRSU0JVWldOb2JtOXNiMmRwWlhNeEREQUtCZ05WCkJBTVRBME5EUlRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTTJnclpuVnBEd24KNEZ4UjlzK25sT2EwQnhZVExTT3ZteWlNRy9NMTl0bDhtMitNQjNCQ2RaMXZUNzNxa2ZrL29wK010cXZmbUVLVAplYjdramhmdGFQWk [...]
    service:
      name: simpleautoscale-webhook
      namespace: operator
      path: /mutating-resource
      port: 8000
  # 失败策略忽略
  failurePolicy: Ignore 
  matchPolicy: Exact
  name: simpleautoscale-webhook.shikanon.com
  reinvocationPolicy: Never
  # objectSelector: # 对象过滤条件
  #     matchExpressions:
  #     - key: autoscale
  #       operator: In
  #       values:
  #       - enabled
  #       - "true"
  rules:
  - apiGroups:
    - "apps"
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    scope: '*'
  sideEffects: None
  timeoutSeconds: 2
